fix(CustomerCase): overflowing content width

--- a/src/components/customerCases/customerCase/customerCase.module.css
+++ b/src/components/customerCases/customerCase/customerCase.module.css
@@ -13,6 +13,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: 1400px;
   padding: 0 2rem;
 
